--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "autofleet-task-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dolev7.github.io/autofleet-task-frontend/",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0"
   }
 }
